--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,9 +5,10 @@ workflows:
     instance_type: mac_mini_m1
     environment:
       groups:
-        - google_play_credentials
+        - Production
       vars:
         GEMINI_API_KEY: ${GEMINI_API_KEY}
+        REVENUECAT_API_KEY: ${REVENUECAT_API_KEY}
         PACKAGE_NAME: "com.mastergrowbot.app"
       node: latest
     scripts:
@@ -24,7 +25,7 @@ workflows:
         script: |
           echo $CM_KEYSTORE | base64 --decode > android/app/mastergrowbot.keystore
           cat > android/key.properties <<EOF
-          storePassword=$CM_KEY_PASSWORD
+          storePassword=$CM_STORE_PASSWORD
           keyPassword=$CM_KEY_PASSWORD
           keyAlias=$CM_KEY_ALIAS
           storeFile=mastergrowbot.keystore
