--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,7 +14,7 @@ workflows:
     scripts:
       - name: Install Dependencies
         script: |
-          npm install --legacy-peer-deps
+          npm install --legacy-peer-deps && npm install @capacitor/android --legacy-peer-deps
       - name: Web Build
         script: |
           npm run build
