--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -20,7 +20,7 @@ workflows:
           npm run build
       - name: Capacitor Sync
         script: |
-          npx cap sync android
+          npx cap add android || true && npx cap sync android
       - name: Set up KeyStore
         script: |
           echo $CM_KEYSTORE | base64 --decode > android/app/mastergrowbot.keystore
@@ -32,7 +32,10 @@ workflows:
           EOF
       - name: Build Android App Bundle
         script: |
-          cd android && ./gradlew bundleRelease
+          cd android
+          gradle wrapper
+          chmod +x gradlew
+          ./gradlew bundleRelease
     artifacts:
       - android/app/build/outputs/bundle/release/*.aab
     publishing:
