--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,6 +10,7 @@ workflows:
         GEMINI_API_KEY: ${GEMINI_API_KEY}
         REVENUECAT_API_KEY: ${REVENUECAT_API_KEY}
         PACKAGE_NAME: "com.mastergrowbot.app"
+        JAVA_HOME: /Library/Java/JavaVirtualMachines/zulu-17.jdk/Contents/Home
       node: latest
     scripts:
       - name: Install Dependencies
@@ -24,6 +25,7 @@ workflows:
           npm install @capacitor/android --legacy-peer-deps
           npx cap add android
           npx cap sync android
+          echo "android.jetifier.ignorelist=bcprov-jdk18on" >> android/gradle.properties
       - name: Set up KeyStore
         script: |
           echo $CM_KEYSTORE | base64 --decode > android/app/mastergrowbot.keystore
