ci: Increase Gradle JVM heap size
Increase the JVM heap size for Gradle builds in Codemagic to prevent potential OutOfMemory errors during complex build processes. This change also adds `android.enableJetifier=false` to the `gradle.properties` to disable Jetifier, which can sometimes cause compatibility issues and is often unnecessary with modern libraries.

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,6 +11,8 @@ workflows:
         REVENUECAT_API_KEY: ${REVENUECAT_API_KEY}
         PACKAGE_NAME: "com.mastergrowbot.app"
         JAVA_HOME: /Library/Java/JavaVirtualMachines/zulu-17.jdk/Contents/Home
+        JAVA_OPTS: "-Xmx4g"
+        GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4g"
       node: latest
     scripts:
       - name: Install Dependencies
@@ -25,6 +27,7 @@ workflows:
           npm install @capacitor/android --legacy-peer-deps
           npx cap add android
           npx cap sync android
+          echo "android.enableJetifier=false" >> android/gradle.properties
           echo "android.jetifier.ignorelist=bcprov-jdk18on" >> android/gradle.properties
       - name: Set up KeyStore
         script: |
@@ -39,6 +42,7 @@ workflows:
         script: |
           cd android
           chmod +x gradlew
+          ./gradlew clean
           ./gradlew bundleRelease
     artifacts:
       - android/app/build/outputs/bundle/release/*.aab
