--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -31,8 +31,8 @@ workflows:
           echo "android.useAndroidX=true" > android/gradle.properties
           echo "android.enableJetifier=false" >> android/gradle.properties
           cd android
+          ./gradlew wrapper --gradle-version 8.5 --distribution-type bin
           chmod +x gradlew
-          ./gradlew wrapper --gradle-version 8.5
           cd ..
       - name: Set up KeyStore
         script: |
