build: Update Android build process
Refactor `codemagic.yaml` to streamline Android build setup. This change moves the Gradle wrapper setup and version check to be executed before the clean and bundleRelease tasks, ensuring consistent builds.

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -30,10 +30,6 @@ workflows:
           rm -rf ~/.gradle/caches
           echo "android.useAndroidX=true" > android/gradle.properties
           echo "android.enableJetifier=false" >> android/gradle.properties
-          cd android
-          ./gradlew wrapper --gradle-version 8.5 --distribution-type bin
-          chmod +x gradlew
-          cd ..
       - name: Set up KeyStore
         script: |
           echo $CM_KEYSTORE | base64 --decode > android/app/mastergrowbot.keystore
@@ -47,6 +43,8 @@ workflows:
         script: |
           cd android
           chmod +x gradlew
+          ./gradlew wrapper --gradle-version 8.5 --distribution-type bin
+          ./gradlew --version
           ./gradlew clean
           ./gradlew bundleRelease --no-daemon
     artifacts:
