feat(build): Configure Codemagic for Android release signing
Updates `codemagic.yaml` to enable automatic Android release signing using Codemagic's environment variables. This simplifies the build process and removes manual keystore configuration.

Includes updates to the Gradle wrapper version, resolution strategy, and Jetifier settings to ensure compatibility and a more robust build environment.

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,6 +4,8 @@ workflows:
     max_build_duration: 60
     instance_type: mac_mini_m1
     environment:
+      android_signing:
+        - mastergrowbot_keystore
       groups:
         - Production
       vars:
@@ -28,23 +30,31 @@ workflows:
           npx cap add android
           npx cap sync android
           rm -rf ~/.gradle/caches
+          # Global Resolution Strategy Fix: Injected into root build.gradle to force bcprov version across all submodules
+          echo "allprojects { configurations.all { resolutionStrategy.force 'org.bouncycastle:bcprov-jdk18on:1.79' } }" >> android/build.gradle
+          # Ensure Jetifier is disabled to prevent transformation of security libraries
           echo "android.useAndroidX=true" > android/gradle.properties
           echo "android.enableJetifier=false" >> android/gradle.properties
+          echo "android.jetifier.ignorelist=bcprov-jdk18on" >> android/gradle.properties
+          # Force upgrade to Gradle 8.7
+          cd android
+          ./gradlew wrapper --gradle-version 8.7 --distribution-type all
+          chmod +x gradlew
+          ./gradlew --version
+          cd ..
       - name: Set up KeyStore
         script: |
-          echo $CM_KEYSTORE | base64 --decode > android/app/mastergrowbot.keystore
-          cat > android/key.properties <<EOF
-          storePassword=$CM_STORE_PASSWORD
-          keyPassword=$CM_KEY_PASSWORD
-          keyAlias=$CM_KEY_ALIAS
-          storeFile=mastergrowbot.keystore
+          # Use official Codemagic environment variables for automatic signing
+          cat >> android/key.properties <<EOF
+          storePassword=\$CM_KEYSTORE_PASSWORD
+          keyPassword=\$CM_KEY_PASSWORD
+          keyAlias=\$CM_KEY_ALIAS
+          storeFile=\$CM_KEYSTORE_PATH
           EOF
       - name: Build Android App Bundle
         script: |
           cd android
           chmod +x gradlew
-          ./gradlew wrapper --gradle-version 8.5 --distribution-type bin
-          ./gradlew --version
           ./gradlew clean
           ./gradlew bundleRelease --no-daemon
     artifacts:
