--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -13,8 +13,8 @@ workflows:
         REVENUECAT_API_KEY: ${REVENUECAT_API_KEY}
         PACKAGE_NAME: "com.mastergrowbot.app"
         JAVA_HOME: /Library/Java/JavaVirtualMachines/zulu-17.jdk/Contents/Home
-        JAVA_TOOL_OPTIONS: "-Xmx4g"
-        GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4g"
+        JAVA_TOOL_OPTIONS: "-Xmx6g"
+        GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx6g"
       node: latest
     scripts:
       - name: Install Dependencies
@@ -23,22 +23,28 @@ workflows:
       - name: Web Build
         script: |
           npm run build
-      - name: Capacitor Sync
+      - name: Capacitor Sync & Hardening
         script: |
           rm -rf android
           npm install @capacitor/android --legacy-peer-deps
           npx cap add android
           npx cap sync android
-          rm -rf ~/.gradle/caches
-          # Direct File Injection: Forcing resolution strategy into root build.gradle to fix bcprov corruption
+          
+          # 1. Manually edit gradle-wrapper.properties BEFORE any gradlew commands run
+          # This prevents the build from forking an older, crashing Gradle daemon
+          sed -i '' 's|distributionUrl=.*|distributionUrl=https\\://services.gradle.org/distributions/gradle-8.7-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
+          
+          # 2. Inject global resolutionStrategy into root build.gradle
+          # This forces the correct BouncyCastle version across all sub-modules
           printf "\nallprojects { configurations.all { resolutionStrategy.force 'org.bouncycastle:bcprov-jdk18on:1.79' } }\n" >> android/build.gradle
-          # Hardened gradle properties
+          
+          # 3. Bypass Jetifier and add ignorelist
           echo "android.useAndroidX=true" > android/gradle.properties
           echo "android.enableJetifier=false" >> android/gradle.properties
           echo "android.jetifier.ignorelist=bcprov-jdk18on" >> android/gradle.properties
       - name: Set up KeyStore
         script: |
-          # Generate key.properties using official Codemagic automatic system variables
+          # Use official Codemagic environment variables for automatic signing
           cat >> android/key.properties <<EOF
           storePassword=\$CM_KEYSTORE_PASSWORD
           keyPassword=\$CM_KEY_PASSWORD
@@ -47,12 +53,14 @@ workflows:
           EOF
       - name: Build Android App Bundle
         script: |
-          # The Wrapper Force: Upgrade to 8.7 before any build tasks to ensure Multi-release JAR support
+          # 4. Purge corrupted JAR artifacts from cache
+          rm -rf ~/.gradle/caches/jars-9
+          
           cd android
           chmod +x gradlew
-          ./gradlew wrapper --gradle-version 8.7 --distribution-type all
           ./gradlew --version
           ./gradlew clean
+          # 5. Build with --no-daemon to ensure clean process execution
           ./gradlew bundleRelease --no-daemon
     artifacts:
       - android/app/build/outputs/bundle/release/*.aab
