--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,44 +23,115 @@ workflows:
       - name: Web Build
         script: |
           npm run build
-      - name: Capacitor Sync & Hardening
+      - name: Capacitor Sync & File Reconstruction
         script: |
+          # 1. Start with a fresh Android project state
           rm -rf android
           npm install @capacitor/android --legacy-peer-deps
           npx cap add android
           npx cap sync android
-          
-          # 1. Manually edit gradle-wrapper.properties BEFORE any gradlew commands run
-          # This prevents the build from forking an older, crashing Gradle daemon
+
+          # 2. Reconstruct variables.gradle for Android 15 (SDK 35)
+          cat <<EOF > android/variables.gradle
+          ext {
+              minSdkVersion = 22
+              compileSdkVersion = 35
+              targetSdkVersion = 35
+              androidxActivityVersion = '1.9.2'
+              androidxAppCompatVersion = '1.7.0'
+              androidxCoreVersion = '1.13.1'
+              androidxMaterialVersion = '1.12.0'
+              androidxBrowserVersion = '1.8.0'
+              androidxLocalBroadcastManagerVersion = '1.1.0'
+              androidxExifInterfaceVersion = '1.3.7'
+              firebaseMessagingVersion = '24.0.0'
+              playServicesLocationVersion = '21.3.0'
+          }
+          EOF
+
+          # 3. Reconstruct app/build.gradle (Missing or Empty Fix)
+          cat <<EOF > android/app/build.gradle
+          apply plugin: 'com.android.application'
+
+          android {
+              namespace "${PACKAGE_NAME}"
+              compileSdkVersion rootProject.ext.compileSdkVersion
+              defaultConfig {
+                  applicationId "${PACKAGE_NAME}"
+                  minSdkVersion rootProject.ext.minSdkVersion
+                  targetSdkVersion rootProject.ext.targetSdkVersion
+                  versionCode 1
+                  versionName "1.0"
+                  testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+                  aaptOptions {
+                       nocompress 'capgen'
+                  }
+              }
+              buildTypes {
+                  release {
+                      minifyEnabled false
+                      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+                      signingConfig signingConfigs.debug
+                  }
+              }
+              compileOptions {
+                  sourceCompatibility JavaVersion.VERSION_21
+                  targetCompatibility JavaVersion.VERSION_21
+              }
+          }
+
+          repositories {
+              flatDir {
+                  dirs 'libs'
+              }
+          }
+
+          dependencies {
+              implementation fileTree(dir: 'libs', include: ['*.jar'])
+              implementation "androidx.appcompat:appcompat:\$rootProject.ext.androidxAppCompatVersion"
+              implementation "androidx.activity:activity:\$rootProject.ext.androidxActivityVersion"
+              implementation project(':capacitor-android')
+              implementation project(':capacitor-cordova-android-plugins')
+          }
+
+          try {
+              def servicesJSON = file('google-services.json')
+              if (servicesJSON.text) {
+                  apply plugin: 'com.google.gms.google-services'
+              }
+          } catch(Exception e) {
+              logger.info("google-services.json not found, skipping Google Services plugin")
+          }
+          EOF
+
+          # 4. Force Gradle 8.7 to handle Multi-release JARs (BouncyCastle fix)
           sed -i '' 's|distributionUrl=.*|distributionUrl=https\\://services.gradle.org/distributions/gradle-8.7-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
           
-          # 2. Inject global resolutionStrategy into root build.gradle
-          # This forces the correct BouncyCastle version across all sub-modules
+          # 5. Inject BouncyCastle resolutionStrategy into root build.gradle
           printf "\nallprojects { configurations.all { resolutionStrategy.force 'org.bouncycastle:bcprov-jdk18on:1.79' } }\n" >> android/build.gradle
           
-          # 3. Bypass Jetifier and add ignorelist
+          # 6. Global properties
           echo "android.useAndroidX=true" > android/gradle.properties
           echo "android.enableJetifier=false" >> android/gradle.properties
-          echo "android.jetifier.ignorelist=bcprov-jdk18on" >> android/gradle.properties
+
       - name: Set up KeyStore
         script: |
-          # Use official Codemagic environment variables for automatic signing
           cat >> android/key.properties <<EOF
           storePassword=\$CM_KEYSTORE_PASSWORD
           keyPassword=\$CM_KEY_PASSWORD
           keyAlias=\$CM_KEY_ALIAS
           storeFile=\$CM_KEYSTORE_PATH
           EOF
+
       - name: Build Android App Bundle
         script: |
-          # 4. Purge corrupted JAR artifacts from cache
+          # 7. Purge corrupted cache artifacts
           rm -rf ~/.gradle/caches/jars-9
           
           cd android
           chmod +x gradlew
           ./gradlew --version
           ./gradlew clean
-          # 5. Build with --no-daemon to ensure clean process execution
           ./gradlew bundleRelease --no-daemon
     artifacts:
       - android/app/build/outputs/bundle/release/*.aab
