--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,15 +23,15 @@ workflows:
       - name: Web Build
         script: |
           npm run build
-      - name: Capacitor Sync & File Reconstruction
+      - name: Capacitor Sync & Self-Healing File Injection
         script: |
-          # 1. Start with a fresh Android project state
+          # 1. Start fresh to ensure sync is clean
           rm -rf android
           npm install @capacitor/android --legacy-peer-deps
           npx cap add android
           npx cap sync android
 
-          # 2. Reconstruct variables.gradle for Android 15 (SDK 35)
+          # 2. Inject variables.gradle with Android 15 (SDK 35) specifics
           cat <<EOF > android/variables.gradle
           ext {
               minSdkVersion = 22
@@ -39,17 +39,15 @@ workflows:
               targetSdkVersion = 35
               androidxActivityVersion = '1.9.2'
               androidxAppCompatVersion = '1.7.0'
-              androidxCoreVersion = '1.13.1'
-              androidxMaterialVersion = '1.12.0'
-              androidxBrowserVersion = '1.8.0'
-              androidxLocalBroadcastManagerVersion = '1.1.0'
-              androidxExifInterfaceVersion = '1.3.7'
-              firebaseMessagingVersion = '24.0.0'
-              playServicesLocationVersion = '21.3.0'
+              androidxCoordinatorLayoutVersion = '1.2.0'
+              androidxCoreVersion = '1.12.0'
+              androidxFragmentVersion = '1.6.2'
+              coreSplashScreenVersion = '1.0.1'
+              androidxWebkitVersion = '1.9.0'
           }
           EOF
 
-          # 3. Reconstruct app/build.gradle (Missing or Empty Fix)
+          # 3. Inject missing/empty app/build.gradle with standard Capacitor 6 template
           cat <<EOF > android/app/build.gradle
           apply plugin: 'com.android.application'
 
@@ -89,7 +87,11 @@ workflows:
           dependencies {
               implementation fileTree(dir: 'libs', include: ['*.jar'])
               implementation "androidx.appcompat:appcompat:\$rootProject.ext.androidxAppCompatVersion"
-              implementation "androidx.activity:activity:\$rootProject.ext.androidxActivityVersion"
+              implementation "androidx.coordinatorlayout:coordinatorlayout:\$rootProject.ext.androidxCoordinatorLayoutVersion"
+              implementation "androidx.core:core:\$rootProject.ext.androidxCoreVersion"
+              implementation "androidx.fragment:fragment:\$rootProject.ext.androidxFragmentVersion"
+              implementation "androidx.core:core-splashscreen:\$rootProject.ext.coreSplashScreenVersion"
+              implementation "androidx.webkit:webkit:\$rootProject.ext.androidxWebkitVersion"
               implementation project(':capacitor-android')
               implementation project(':capacitor-cordova-android-plugins')
           }
@@ -104,13 +106,25 @@ workflows:
           }
           EOF
 
-          # 4. Force Gradle 8.7 to handle Multi-release JARs (BouncyCastle fix)
+          # 4. Inject missing strings.xml
+          mkdir -p android/app/src/main/res/values
+          cat <<EOF > android/app/src/main/res/values/strings.xml
+          <?xml version="1.0" encoding="utf-8"?>
+          <resources>
+              <string name="app_name">MasterGrowbot AI</string>
+              <string name="title_activity_main">MasterGrowbot AI</string>
+              <string name="package_name">com.mastergrowbot.app</string>
+              <string name="custom_url_scheme">com.mastergrowbot.app</string>
+          </resources>
+          EOF
+
+          # 5. Force Gradle Wrapper to 8.7 (fixes Multi-release JAR support)
           sed -i '' 's|distributionUrl=.*|distributionUrl=https\\://services.gradle.org/distributions/gradle-8.7-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
           
-          # 5. Inject BouncyCastle resolutionStrategy into root build.gradle
+          # 6. Global BouncyCastle resolutionStrategy injection
           printf "\nallprojects { configurations.all { resolutionStrategy.force 'org.bouncycastle:bcprov-jdk18on:1.79' } }\n" >> android/build.gradle
           
-          # 6. Global properties
+          # 7. Core properties
           echo "android.useAndroidX=true" > android/gradle.properties
           echo "android.enableJetifier=false" >> android/gradle.properties
 
@@ -125,13 +139,14 @@ workflows:
 
       - name: Build Android App Bundle
         script: |
-          # 7. Purge corrupted cache artifacts
+          # 8. Purge corrupted JAR cache
           rm -rf ~/.gradle/caches/jars-9
           
           cd android
           chmod +x gradlew
           ./gradlew --version
           ./gradlew clean
+          # 9. Final build using JDK 21 and Gradle 8.7
           ./gradlew bundleRelease --no-daemon
     artifacts:
       - android/app/build/outputs/bundle/release/*.aab
