feat: Integrate in-app review and update dependencies
Add the `@capacitor-community/in-app-review` package to enable in-app review functionality. Update existing dependencies for compatibility and potential bug fixes.

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -20,6 +20,7 @@ workflows:
       - name: Install Dependencies
         script: |
           npm install --legacy-peer-deps
+          npm install @capacitor-community/in-app-review --legacy-peer-deps
       - name: Web Build
         script: |
           npm run build
