fix: Correct Android keystore property expansion
Previously, the `codemagic.yaml` script incorrectly escaped shell variables when writing the Android keystore properties. This commit removes the unnecessary backslashes, allowing Codemagic to correctly expand the `CM_KEYSTORE_PASSWORD`, `CM_KEY_PASSWORD`, `CM_KEY_ALIAS`, and `CM_KEYSTORE_PATH` variables into the `android/key.properties` file. This ensures the Android build process can access the necessary signing credentials.

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -160,12 +160,12 @@ workflows:
 
       - name: Set up KeyStore
         script: |
-          # Use CM UI variable names and ensure storeFile points to the actual temporary path
+          # Variable expansion is used here to write actual values into the properties file
           cat >> android/key.properties <<EOF
-          storePassword=\$CM_KEYSTORE_PASSWORD
-          keyPassword=\$CM_KEY_PASSWORD
-          keyAlias=\$CM_KEY_ALIAS
-          storeFile=\$CM_KEYSTORE_PATH
+          storePassword=$CM_KEYSTORE_PASSWORD
+          keyPassword=$CM_KEY_PASSWORD
+          keyAlias=$CM_KEY_ALIAS
+          storeFile=$CM_KEYSTORE_PATH
           EOF
 
       - name: Build Android App Bundle
